@@ -29,6 +29,7 @@ def test_suite():
     from opencore.browser.base import BaseView
     from opencore.i18n import _
     from opencore.testing import utils
+    import os
     
     setup.setupPloneSite()
     def readme_setup(tc): # XXX duplicates simple_setup?
@@ -41,6 +42,13 @@ def test_suite():
 
     def teardown(tc):
         utils.unmonkey_proj_noun()
+
+    def errors_teardown(tc):
+        import os
+        try:
+            del os.environ['SUPERVISOR_ENABLED']
+        except KeyError:
+            pass
 
     globs = locals()
     readme = dtf.ZopeDocFileSuite("README.txt",
@@ -58,6 +66,7 @@ def test_suite():
                                   test_class=MockMailHostTestCase,
                                   globs = globs,
                                   setUp=readme_setup,
+                                  tearDown=errors_teardown,
                                   layer = test_layer
                                   )
 
